--- a/ELI_data_frame_part1.ipynb
+++ b/ELI_data_frame_part1.ipynb
@@ -3385,46 +3385,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Trail part for spell checker."
+   ]
   },
   {
    "cell_type": "code",
@@ -3455,32 +3420,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspellchecker in /anaconda3/lib/python3.6/site-packages (0.4.0)\n",
+      "\u001b[33mYou are using pip version 18.1, however version 19.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pyspellchecker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happening\n",
+      "{'happening', 'henning', 'penning'}\n"
+     ]
+    }
+   ],
    "source": [
     "from spellchecker import SpellChecker\n",
     "\n",
@@ -3499,16 +3469,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'goole'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spell.correction('google')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,63 +3499,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'google'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spell.correction('google')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'goole', 'microsoft'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spell.known(['microsoft', 'goole'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_SpellChecker__edit_distance_alt', '__class__', '__contains__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '_check_if_should_check', '_distance', '_word_frequency', 'candidates', 'correction', 'distance', 'edit_distance_1', 'edit_distance_2', 'export', 'known', 'split_words', 'unknown', 'word_frequency', 'word_probability']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(spell)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method unknown in module spellchecker.spellchecker:\n",
+      "\n",
+      "unknown(words) method of spellchecker.spellchecker.SpellChecker instance\n",
+      "    The subset of `words` that do not appear in the dictionary\n",
+      "    \n",
+      "    Args:\n",
+      "        words (list): List of words to determine which are not in the                 corpus\n",
+      "    Returns:\n",
+      "        set: The set of those words from the input that are not in                 the corpus\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(spell.unknown)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'applk'}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spell.unknown(['applk'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on SpellChecker in module spellchecker.spellchecker object:\n",
+      "\n",
+      "class SpellChecker(builtins.object)\n",
+      " |  The SpellChecker class encapsulates the basics needed to accomplish a\n",
+      " |  simple spell checking algorithm. It is based on the work by\n",
+      " |  Peter Norvig (https://norvig.com/spell-correct.html)\n",
+      " |  \n",
+      " |  Args:\n",
+      " |      language (str): The language of the dictionary to load or None             for no dictionary. Supported languages are `en`, `es`, `de`, fr`             and `pt`. Defaults to `en`\n",
+      " |      local_dictionary (str): The path to a locally stored word             frequency dictionary; if provided, no language will be loaded\n",
+      " |      distance (int): The edit distance to use. Defaults to 2\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __contains__(self, key)\n",
+      " |      setup easier known checks\n",
+      " |  \n",
+      " |  __getitem__(self, key)\n",
+      " |      setup easier frequency checks\n",
+      " |  \n",
+      " |  __init__(self, language='en', local_dictionary=None, distance=2)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  candidates(self, word)\n",
+      " |      Generate possible spelling corrections for the provided word up to\n",
+      " |      an edit distance of two, if and only when needed\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          word (str): The word for which to calculate candidate spellings\n",
+      " |      Returns:\n",
+      " |          set: The set of words that are possible candidates\n",
+      " |  \n",
+      " |  correction(self, word)\n",
+      " |      The most probable correct spelling for the word\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          word (str): The word to correct\n",
+      " |      Returns:\n",
+      " |          str: The most likely candidate\n",
+      " |  \n",
+      " |  edit_distance_1(self, word)\n",
+      " |      Compute all strings that are one edit away from `word` using only\n",
+      " |      the letters in the corpus\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          word (str): The word for which to calculate the edit distance\n",
+      " |      Returns:\n",
+      " |          set: The set of strings that are edit distance one from the                 provided word\n",
+      " |  \n",
+      " |  edit_distance_2(self, word)\n",
+      " |      Compute all strings that are two edits away from `word` using only\n",
+      " |      the letters in the corpus\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          word (str): The word for which to calculate the edit distance\n",
+      " |      Returns:\n",
+      " |          set: The set of strings that are edit distance two from the                 provided word\n",
+      " |  \n",
+      " |  export(self, filepath, encoding='utf-8', gzipped=True)\n",
+      " |      Export the word frequency list for import in the future\n",
+      " |      \n",
+      " |      Args:\n",
+      " |         filepath (str): The filepath to the exported dictionary\n",
+      " |         encoding (str): The encoding of the resulting output\n",
+      " |         gzipped (bool): Whether to gzip the dictionary or not\n",
+      " |  \n",
+      " |  known(self, words)\n",
+      " |      The subset of `words` that appear in the dictionary of words\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          words (list): List of words to determine which are in the                 corpus\n",
+      " |      Returns:\n",
+      " |          set: The set of those words from the input that are in the                 corpus\n",
+      " |  \n",
+      " |  unknown(self, words)\n",
+      " |      The subset of `words` that do not appear in the dictionary\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          words (list): List of words to determine which are not in the                 corpus\n",
+      " |      Returns:\n",
+      " |          set: The set of those words from the input that are not in                 the corpus\n",
+      " |  \n",
+      " |  word_probability(self, word, total_words=None)\n",
+      " |      Calculate the probability of the `word` being the desired, correct\n",
+      " |      word\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          word (str): The word for which the word probability is                 calculated\n",
+      " |          total_words (int): The total number of words to use in the                 calculation; use the default for using the whole word                 frequency\n",
+      " |      Returns:\n",
+      " |          float: The probability that the word is the correct word\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  split_words(text)\n",
+      " |      Split text into individual `words` using a simple whitespace regex\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          text (str): The text to split into individual words\n",
+      " |      Returns:\n",
+      " |          list(str): A listing of all words in the provided text\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  distance\n",
+      " |      int: The maximum edit distance to calculate\n",
+      " |      \n",
+      " |      Note:\n",
+      " |          Valid values are 1 or 2; if an invalid value is passed,                 defaults to 2\n",
+      " |  \n",
+      " |  word_frequency\n",
+      " |      WordFrequency: An encapsulation of the word frequency `dictionary`\n",
+      " |      \n",
+      " |      Note:\n",
+      " |          Not settable\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(spell)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "526"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(spell.edit_distance_1('applk'))"
    ]
