--- a/ELI_data_frame_part1.ipynb
+++ b/ELI_data_frame_part1.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "## NEW REPLACEMENT\n",
     "## Exploring ELI data frame\n",
-    "#### Ting-Wei Shen, tis50@pitt.edu, Mar19, 2019"
+    "#### Ting-Wei Shen, tis50@pitt.edu, Mar19, 2019\n",
+    "\n",
+    "### Table of contents\n",
+    "- [1. Loading chosen data](#Loading-chosen-data) is where I combined files into one dataframe.\n",
+    "- [2. Data Analysis](#Data-Analysis) is where I did some data calculation.\n",
+    "- [3. Preprocessing for Linguistic Analysis](#Preprocessing-for-Linguistic-Analysis) is where I did some data calculation.\n",
+    "- [4. Conclusion](#Conclusion) rounds up with some observations."
    ]
   },
   {
@@ -1615,7 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linguistic Analysis\n",
+    "## Data Analysis\n",
     "### 1. Text length as token count\n",
     "- Let's count text length\n",
     "- In this part, nltk.word_tokenize return error caused by the wrong input first. That is because some text is stored in \"float\" type, and word_tokenize only accepts \"string\" format. I have to set every text into \"string\" format first, then utilize word_tokenize()."
@@ -2975,102 +2981,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The output above is counted by text. We may want to look at the number of total students and the number of essay they write.\n",
-    "- Let's go through the data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "cx0    5\n",
-       "es9    5\n",
-       "cp5    4\n",
-       "gv1    4\n",
-       "bs1    4\n",
-       "cb8    3\n",
-       "ac5    3\n",
-       "fs4    3\n",
-       "bq0    3\n",
-       "dq9    3\n",
-       "Name: student_id, dtype: int64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_eli_short.student_id.value_counts().head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    353.000000\n",
-       "mean       1.393768\n",
-       "std        0.715626\n",
-       "min        1.000000\n",
-       "25%        1.000000\n",
-       "50%        1.000000\n",
-       "75%        2.000000\n",
-       "max        5.000000\n",
-       "Name: student_id, dtype: float64"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_eli_short.student_id.value_counts().describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count     492\n",
-       "unique    353\n",
-       "top       cx0\n",
-       "freq        5\n",
-       "Name: student_id, dtype: object"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_eli_short.student_id.describe()"
+    "### Summary\n",
+    "- From the chart above, we can find that most texts are written by Arabic, Korean and Chinese students.\n",
+    "- The number of text by L1 are not distributed well."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
-    "\n",
-    "- There are 492 texts in the dataframe.\n",
-    "- These texts are written by 353 students.\n",
-    "- The max number of essays students wrote is 5.\n",
-    "- Students write 1.39 essay in average."
+    "## Preprocessing for Linguistic Analysis"
    ]
   },
   {
@@ -3404,6 +3324,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cx0    5\n",
+       "es9    5\n",
+       "cp5    4\n",
+       "gv1    4\n",
+       "bs1    4\n",
+       "cb8    3\n",
+       "ac5    3\n",
+       "fs4    3\n",
+       "bq0    3\n",
+       "dq9    3\n",
+       "Name: student_id, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.student_id.value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    353.000000\n",
+       "mean       1.393768\n",
+       "std        0.715626\n",
+       "min        1.000000\n",
+       "25%        1.000000\n",
+       "50%        1.000000\n",
+       "75%        2.000000\n",
+       "max        5.000000\n",
+       "Name: student_id, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.student_id.value_counts().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     492\n",
+       "unique    353\n",
+       "top       cx0\n",
+       "freq        5\n",
+       "Name: student_id, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.student_id.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     492.000000\n",
+       "mean      100.709350\n",
+       "std       173.646359\n",
+       "min         1.000000\n",
+       "25%         8.000000\n",
+       "50%        24.500000\n",
+       "75%       124.250000\n",
+       "max      1262.000000\n",
+       "Name: token_count, dtype: float64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.token_count.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    492.000000\n",
+       "mean       0.783395\n",
+       "std        0.212235\n",
+       "min        0.298103\n",
+       "25%        0.597561\n",
+       "50%        0.854497\n",
+       "75%        1.000000\n",
+       "max        1.000000\n",
+       "Name: TTR, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.TTR.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.000000    0.333333\n",
+       "0.857143    0.014228\n",
+       "0.937500    0.012195\n",
+       "0.900000    0.010163\n",
+       "0.750000    0.010163\n",
+       "Name: TTR, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eli_short.TTR.value_counts(normalize=True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
@@ -3414,6 +3497,28 @@
     "pickle.dump(df_eli_short, f, -1)       # -1 specifies highest binary protocol\n",
     "f.close()  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "- There are 492 texts in the dataframe.\n",
+    "- These texts are written by 353 students.\n",
+    "- The max number of essays students wrote is 5.\n",
+    "- Students write 1.39 essays in average.\n",
+    "- The length of texts are not distributed well. Most of them (about 65%) are under 65 tokens. Half of them are under 24.5 tokens.\n",
+    "- Most texts are written by Arabic, Korean and Chinese students.\n",
+    "- TTR has a lot of bias. About 33% texts' TTR are 1. That is because there are only one word in the texts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
