--- a/ELI_part2.ipynb
+++ b/ELI_part2.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "## NEW CONTINUING\n",
     "\n",
-    "#### Ting-Wei Shen, tis50@pitt.edu, Apr 8, 2019\n"
+    "#### Ting-Wei Shen, tis50@pitt.edu, Apr 8, 2019\n",
+    "\n",
+    "### Table of contents\n",
+    "- [1. Select proper data](#Select-proper-data) is where I select partial data for analysis.\n",
+    "- [2. Linguistic Analysis](#Linguistic-Analysis) is where I did some linguistic analysis.\n",
+    "- [3. Apply spell checker](#Apply-spell-checker) is where I apply spell checker on my data\n",
+    "- [4. Conclusion](#Conclusion) rounds up with some observations."
    ]
   },
   {
@@ -587,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linguistics Analysis\n",
+    "### Linguistic Analysis\n",
     "\n",
     "#### 1. Lexical diversity\n",
     "- Type-Token ratio ( TTR )"
@@ -3516,7 +3522,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary\n",
+    "### Conclusion\n",
     "\n",
     "- In general, there are not many misspellings in the data. That may be caused by students have less error in the writing material.\n",
     "- The spell checker (by Peter Norvig) still has many restriction on data. The performance will be influenced by the dictionary and tokenized words. We need to choose the proper dictionary corresponding to our data. \n",
